# trustfall-lite

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  LICENSE  LIMITATIONS.md  NOTICE  PRIVACY.md  README.md  RELEASE.md  SECURITY.md  SETUP.md  TRUST_MODEL.md  VERIFYING.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  registry_coverage.yml
.github/codeql/: codeql-config.yml
.github/workflows/: codeql.yml  release-dry-run.yml  release.yml  test.yml
docs/: INVENTORY_EXPORT.md
src/fallrisk_trustfall/: __init__.py  api.py  bundled_jwks.json  cli.py  diff.py  export.py  formatter.py  hashing.py  models.py  registry.py  roots.py  scanner.py
src/fallrisk_trustfall/adapters/: __init__.py  base.py  hf_cache.py  lmstudio.py  ollama.py  path.py
tests/: fixtures.py  test_adapters.py  test_api.py  test_cli.py  test_cli_diff.py  test_diff.py  test_export_step3_patches.py  test_export_step4_drift.py  test_formatter.py  test_hashing.py  test_ollama_adapter.py  test_registry.py  test_scanner.py
