[project]
name = "fallrisk-trustfall"
version = "0.3.1"
description = "Local artifact verifier for the Fall Risk model identity registry"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    {name = "Fall Risk AI, LLC"},
]
keywords = ["model-identity", "supply-chain", "verification", "huggingface"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "click>=8.1,<9.0",
    "httpx>=0.27,<0.29",
    "python-jose[cryptography]>=3.3,<3.5",
    "rich>=13.7,<14.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0,<9.0",
    "pytest-mock>=3.12,<4.0",
    "respx>=0.21,<0.23",
]

[project.scripts]
trustfall = "fallrisk_trustfall.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["fallrisk_trustfall*"]

[tool.setuptools.package-data]
fallrisk_trustfall = ["bundled_jwks.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers"
